address sonar cloud code quality issues